--- a/Carnetul de Note.xcodeproj/xcshareddata/xcschemes/Carnetul de Note.xcscheme
+++ b/Carnetul de Note.xcodeproj/xcshareddata/xcschemes/Carnetul de Note.xcscheme
@@ -39,7 +39,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "72A858A21C67A81400FD8810"
