--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-language: objective-c  #1
-osx_image: xcode7.3 #2
-xcode_project: CarnetulDeNote.xcodeproj #3
-xcode_scheme: CarnetulDeNote #4
-xcode_sdk: iphonesimulator9.2 #5
+language: objective-c
+osx_image: xcode7.3
+xcode_project: CarnetulDeNote.xcodeproj
+xcode_scheme: CarnetulDeNote
+xcode_sdk: iphonesimulator9.2
