--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ osx_image: xcode7.2
 xcode_workspace: "Carnetul de Note.xcworkspace"
 xcode_scheme: "Carnetul de Note"
 xcode_sdk: iphonesimulator9.2
+env:
+  - TEST_SUITE=build
+  - TEST_SUITE=test
+script: xctool -workspace Carnetul\ de\ Note.xcworkspace -scheme Carnetul\ de\ Note -sdk iphonesimulator9.2 $TEST_SUITE
